--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss-cli": "^10.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-chat-engine": "^1.11.23",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
