--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@googlemaps/react-wrapper": "^1.1.35",
-    "@heroicons/react": "^1.0.6",
-    "@react-google-maps/api": "^2.12.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@heroicons/react": "^1.0.6",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.2",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@react-google-maps/api": "^2.12.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "address": "^1.2.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "chalk": "^5.0.1",
+    "common-path-prefix": "^3.0.0",
+    "detect-port-alt": "^1.1.6",
+    "is-root": "^3.0.0",
     "jwt-decode": "^3.1.2",
     "postcss-cli": "^10.0.0",
     "quick-sort": "^0.2.1",
@@ -27,7 +30,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
@@ -56,7 +59,7 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "10.4.5",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
   }
