--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@heroicons/react": "^1.0.6",
+    "@react-google-maps/api": "^2.12.1",
+    "@babel/helper-string-parser": "^7.18.10",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@googlemaps/react-wrapper": "^1.1.35",
