--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "pif-ui",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "node": "16.x"
+  },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
     "@heroicons/react": "^1.0.6",
