--- a/package.json
+++ b/package.json
@@ -2,29 +2,27 @@
   "name": "pif-ui",
   "version": "0.1.0",
   "private": true,
-  "engines":{
+  "engines": {
     "node": "16.x",
     "npm": "8.5.5"
   },
   "dependencies": {
-    "@googlemaps/react-wrapper": "^1.1.35",
-    "@heroicons/react": "^1.0.6",
-    "@react-google-maps/api": "^2.12.1",
     "@babel/helper-string-parser": "^7.18.10",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^1.0.6",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.2",
     "@mui/styled-engine-sc": "^5.8.0",
     "@react-google-maps/api": "^2.12.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "address": "^1.2.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
     "chalk": "^5.0.1",
     "common-path-prefix": "^3.0.0",
     "detect-port-alt": "^1.1.6",
@@ -69,6 +67,6 @@
   "devDependencies": {
     "autoprefixer": "10.4.5",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6"
+    "tailwindcss": "^3.1.8"
   }
 }
