--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/user-event": "^13.5.0",
     "address": "^1.2.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.2",
     "chalk": "^5.0.1",
     "common-path-prefix": "^3.0.0",
     "detect-port-alt": "^1.1.6",
@@ -31,7 +32,7 @@
     "postcss-cli": "^10.0.0",
     "quick-sort": "^0.2.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
+    "react-bootstrap": "^2.5.0",
     "react-chat-engine": "^1.11.23",
     "react-dom": "^18.2.0",
     "react-modal": "^3.15.1",
