--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "address": "^1.2.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
     "chalk": "^5.0.1",
     "common-path-prefix": "^3.0.0",
     "detect-port-alt": "^1.1.6",
