--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "detect-port-alt": "^1.1.6",
     "is-root": "^3.0.0",
     "jwt-decode": "^3.1.2",
+    "netlify-plugin-cloudinary": "^1.2.0",
     "postcss-cli": "^10.0.0",
     "quick-sort": "^0.2.1",
     "react": "^18.2.0",
