--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,6 @@ REACT_APP_CHAT_APP_USER_NAME=Mushu
 REACT_APP_GMAP_API=AIzaSyDfcFt2zs-5ODLk-Vb8tvgVEkfVFol8_HU
 REACT_APP_PIF_API_URL=https://plant-it-forward.fly.dev
 
+CLOUDINARY_CLOUD_NAME='mushu'
+CLOUDINARY_API_KEY='635332326419677'
+CLOUDINARY_API_SECRET='Wc9EQzvnq4bKzuhZ-ngCJtxif2Q'
