--- a/.env.local
+++ b/.env.local
@@ -7,4 +7,4 @@ REACT_APP_PIF_API_URL=https://plant-it-forward.fly.dev
 CLOUDINARY_CLOUD_NAME='mushu'
 CLOUDINARY_API_KEY='635332326419677'
 CLOUDINARY_API_SECRET='Wc9EQzvnq4bKzuhZ-ngCJtxif2Q'
-CLOUDINARY_URL = 'cloudinary://635332326419677:Wc9EQzvnq4bKzuhZ-ngCJtxif2Q@mushu'
+REACT_APP_CLOUDINARY_URL = 'cloudinary://635332326419677:Wc9EQzvnq4bKzuhZ-ngCJtxif2Q@mushu'
